Fixes overflow issue and improves instructions

--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -43,3 +43,7 @@ img {
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
 th     { background:#fff; }
+
+#wrapper {
+	overflow-x:hidden
+}
